cdk.out/assembly-CdkCodePipelineStack-ApplicationStage/CdkCodePipelineStackApplicationStageCdkVpcStackA8E2B8A8.template.json
{
 "Resources": {
  "myVPC01512990": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/Resource"
   }
  },
  "myVPCPublicSubnetSubnet1Subnet16DC0451": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "PublicSubnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/PublicSubnetSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "myVPC01512990"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/PublicSubnetSubnet1/Subnet"
   }
  },
  "myVPCPublicSubnetSubnet1RouteTable17E839DE": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/PublicSubnetSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "myVPC01512990"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/PublicSubnetSubnet1/RouteTable"
   }
  },
  "myVPCPublicSubnetSubnet1RouteTableAssociationCE552C4D": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "myVPCPublicSubnetSubnet1RouteTable17E839DE"
    },
    "SubnetId": {
     "Ref": "myVPCPublicSubnetSubnet1Subnet16DC0451"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/PublicSubnetSubnet1/RouteTableAssociation"
   }
  },
  "myVPCPublicSubnetSubnet1DefaultRouteAC795A4A": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "myVPCIGW5063090B"
    },
    "RouteTableId": {
     "Ref": "myVPCPublicSubnetSubnet1RouteTable17E839DE"
    }
   },
   "DependsOn": [
    "myVPCVPCGW2EC4F0BF"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/PublicSubnetSubnet1/DefaultRoute"
   }
  },
  "myVPCPublicSubnetSubnet1EIPD1E39CB7": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/PublicSubnetSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/PublicSubnetSubnet1/EIP"
   }
  },
  "myVPCPublicSubnetSubnet1NATGatewayAF86DD78": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "myVPCPublicSubnetSubnet1EIPD1E39CB7",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "myVPCPublicSubnetSubnet1Subnet16DC0451"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/PublicSubnetSubnet1"
     }
    ]
   },
   "DependsOn": [
    "myVPCPublicSubnetSubnet1DefaultRouteAC795A4A",
    "myVPCPublicSubnetSubnet1RouteTableAssociationCE552C4D"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/PublicSubnetSubnet1/NATGateway"
   }
  },
  "myVPCPublicSubnetSubnet2Subnet26518C29": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "PublicSubnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/PublicSubnetSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "myVPC01512990"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/PublicSubnetSubnet2/Subnet"
   }
  },
  "myVPCPublicSubnetSubnet2RouteTableB0FC93F6": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/PublicSubnetSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "myVPC01512990"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/PublicSubnetSubnet2/RouteTable"
   }
  },
  "myVPCPublicSubnetSubnet2RouteTableAssociation6C5C78A9": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "myVPCPublicSubnetSubnet2RouteTableB0FC93F6"
    },
    "SubnetId": {
     "Ref": "myVPCPublicSubnetSubnet2Subnet26518C29"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/PublicSubnetSubnet2/RouteTableAssociation"
   }
  },
  "myVPCPublicSubnetSubnet2DefaultRoute5A0B1B81": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "myVPCIGW5063090B"
    },
    "RouteTableId": {
     "Ref": "myVPCPublicSubnetSubnet2RouteTableB0FC93F6"
    }
   },
   "DependsOn": [
    "myVPCVPCGW2EC4F0BF"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/PublicSubnetSubnet2/DefaultRoute"
   }
  },
  "myVPCPrivateSubnetSubnet1Subnet73687137": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "PrivateSubnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/PrivateSubnetSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "myVPC01512990"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/PrivateSubnetSubnet1/Subnet"
   }
  },
  "myVPCPrivateSubnetSubnet1RouteTable46ECBFC6": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/PrivateSubnetSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "myVPC01512990"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/PrivateSubnetSubnet1/RouteTable"
   }
  },
  "myVPCPrivateSubnetSubnet1RouteTableAssociation1CC024A6": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "myVPCPrivateSubnetSubnet1RouteTable46ECBFC6"
    },
    "SubnetId": {
     "Ref": "myVPCPrivateSubnetSubnet1Subnet73687137"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/PrivateSubnetSubnet1/RouteTableAssociation"
   }
  },
  "myVPCPrivateSubnetSubnet1DefaultRoute1BC039B6": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "myVPCPublicSubnetSubnet1NATGatewayAF86DD78"
    },
    "RouteTableId": {
     "Ref": "myVPCPrivateSubnetSubnet1RouteTable46ECBFC6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/PrivateSubnetSubnet1/DefaultRoute"
   }
  },
  "myVPCPrivateSubnetSubnet2Subnet205EC7B7": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "PrivateSubnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/PrivateSubnetSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "myVPC01512990"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/PrivateSubnetSubnet2/Subnet"
   }
  },
  "myVPCPrivateSubnetSubnet2RouteTableD110DC7A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/PrivateSubnetSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "myVPC01512990"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/PrivateSubnetSubnet2/RouteTable"
   }
  },
  "myVPCPrivateSubnetSubnet2RouteTableAssociationC96632F8": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "myVPCPrivateSubnetSubnet2RouteTableD110DC7A"
    },
    "SubnetId": {
     "Ref": "myVPCPrivateSubnetSubnet2Subnet205EC7B7"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/PrivateSubnetSubnet2/RouteTableAssociation"
   }
  },
  "myVPCPrivateSubnetSubnet2DefaultRouteB075CE25": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "myVPCPublicSubnetSubnet1NATGatewayAF86DD78"
    },
    "RouteTableId": {
     "Ref": "myVPCPrivateSubnetSubnet2RouteTableD110DC7A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/PrivateSubnetSubnet2/DefaultRoute"
   }
  },
  "myVPCIGW5063090B": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/IGW"
   }
  },
  "myVPCVPCGW2EC4F0BF": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "myVPCIGW5063090B"
    },
    "VpcId": {
     "Ref": "myVPC01512990"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/VPCGW"
   }
  },
  "myVPCRestrictDefaultSecurityGroupCustomResourceF0D6E4AC": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "myVPC01512990",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "206409480438"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/myVPC/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:us-east-1:206409480438:security-group/",
             {
              "Fn::GetAtt": [
               "myVPC01512990",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-206409480438-us-east-1",
     "S3Key": "7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs20.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "../asset.7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200",
    "aws:asset:property": "Code"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/81UTU/jMBD9LfiI3CzhAKi3EK1QEB9VizhsVK0mzrSYJnbkGaeUqP8d5YNWC9Jedg85zczzzNOz/ezzILwKg/AEtjRR+WZS6CxoFgxqI2FLv1GdB81zpdJGlPAWvZOYilMhhQG+AcYt7D4R8plBjq1Z6bV3wNoaMU0bYaDEP1qedlULzHxWaCWkUDp390Cbrmkv/zLhdA2M30aW+6WMV+Z5FsuedNFNpY2AGnQBmS40735Z88laVyrJh7ylui6s2gx1CVVPklSP5g68US9iys6jFLqqL+Iv7UCk1yap6osozx0SPZrY4bD7YT+jUNEJyfOHw72JaSpOxXI0AsehordSb6A2m1vP+ARZgUf8iEVEVumO4NDcJj+TWRuOhy0H7/53Z66goBGc+b/JGI+SkcjoXZgYRmfw4KH+jxuqiBnUS4mG93KOZL1TmC5l7IlteQDaF945c [...]
   },
   "Metadata": {
    "aws:cdk:path": "CdkCodePipelineStack/ApplicationStage/CdkVpcStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "ExportsOutputRefmyVPC0151299038646803": {
   "Value": {
    "Ref": "myVPC01512990"
   },
   "Export": {
    "Name": "ApplicationStage-CdkVpcStack:ExportsOutputRefmyVPC0151299038646803"
   }
  },
  "ExportsOutputRefmyVPCPublicSubnetSubnet1Subnet16DC04510512DA9B": {
   "Value": {
    "Ref": "myVPCPublicSubnetSubnet1Subnet16DC0451"
   },
   "Export": {
    "Name": "ApplicationStage-CdkVpcStack:ExportsOutputRefmyVPCPublicSubnetSubnet1Subnet16DC04510512DA9B"
   }
  },
  "ExportsOutputRefmyVPCPublicSubnetSubnet2Subnet26518C29D679167B": {
   "Value": {
    "Ref": "myVPCPublicSubnetSubnet2Subnet26518C29"
   },
   "Export": {
    "Name": "ApplicationStage-CdkVpcStack:ExportsOutputRefmyVPCPublicSubnetSubnet2Subnet26518C29D679167B"
   }
  },
  "ExportsOutputRefmyVPCPrivateSubnetSubnet1Subnet73687137F7FEF86A": {
   "Value": {
    "Ref": "myVPCPrivateSubnetSubnet1Subnet73687137"
   },
   "Export": {
    "Name": "ApplicationStage-CdkVpcStack:ExportsOutputRefmyVPCPrivateSubnetSubnet1Subnet73687137F7FEF86A"
   }
  },
  "ExportsOutputRefmyVPCPrivateSubnetSubnet2Subnet205EC7B7F1880CEF": {
   "Value": {
    "Ref": "myVPCPrivateSubnetSubnet2Subnet205EC7B7"
   },
   "Export": {
    "Name": "ApplicationStage-CdkVpcStack:ExportsOutputRefmyVPCPrivateSubnetSubnet2Subnet205EC7B7F1880CEF"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
